--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,7 @@ body {
 }
 
 .home-title {
+  color: #fdfafc;
   font-weight: bold;
 }
 
@@ -55,6 +56,7 @@ h4 {
 
 /* forms */
 .login {
+  color: #fdf7fd;
   padding-left: 16%;
 }
 
@@ -65,6 +67,7 @@ h4 {
 }
 
 .input-field {
+  color: white;
   background-color: rgba(239, 15, 183, 0) !important;
 }
 
@@ -81,8 +84,12 @@ h4 {
   background-color: #cfddd3 !important;
 }
 
+::placeholder {
+  color: #f9f8f9 !important;
+}
+
 input {
-  color: #06010b !important;
+  color: #f9f8f9 !important;
 }
 
 .card {
